Unknown changes here, prior to the move to Janelia. They include the new tree module.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@120 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -68,9 +68,9 @@ error?} \hspace{3em} -- Franz Kafka, \emph{The Castle}
 
 \newpage
 \section{\eslmod{esl\_dmatrix}: linear algebra for 2D double matrices}
-\input{../esl_dmatrix}
+%\input{../esl_dmatrix}
 \subsection{Functions in the dmatrix module}
-\input{autotext/dmatrix_functions}
+\input{autotext/esl_dmatrix_functions}
 
 \newpage
 \section{\eslmod{esl\_fileparser}: token-based data file input}
