--- a/documentation/copyright.tex
+++ b/documentation/copyright.tex
@@ -2,20 +2,7 @@
 \begin{flushleft}
 Copyright (C) 2004-2006 Sean R. Eddy\\
 Copyright (C) 2004-2006 Washington University School of Medicine.\\
-Copyright (C) 2006 Howard Hughes Medical Institute, Janelia Farm Research Campus.\\
-
-\vspace{1.5em}
-Permission is granted to make and distribute verbatim copies of this
-documentation provided the copyright notice and this permission notice
-are retained on all copies.
-
-\vspace{1.5em}
-The Easel software library is licensed and freely distributed under
-the GNU General Public License (GPL).  For a copy of the full text of
-the GPL, see
-\htmladdnormallink{www.gnu.org/licenses}{http://www.gnu.org/licenses/}.
-
-\vspace{1.5em}
+Copyright (C) 2006 HHMI Janelia Farm Research Campus.\\
 \end{flushleft}
 
 
