--- a/documentation/intro.tex
+++ b/documentation/intro.tex
@@ -1,41 +1,109 @@
 
 
-\begin{quote}
- \emph{...using another person's software is sometimes treated like 
- using their toothbrush.}\\
-\hspace*{1em}\hfill - Webb Miller \citep{Miller01}
-\end{quote}
 
 
-Easel is a C code library that underlies some of the bioinformatics
-software packages from the Eddy lab, including HMMER and Infernal, the
-software engines that in turn underlie the Pfam protein family
-database and the Rfam RNA family database. Easel is meant to organize
-a body of work from my lab in a useful form, such that new people in
-my lab can avoid reinventing the wheel as many times as I
-have. Perhaps it will also be useful to you.
+Easel is a C code library for bioinformatics applications. It
+underlies some of the software packages from the Eddy lab, including
+HMMER and Infernal, the software engines that the Pfam and Rfam
+protein and RNA family databases rely on. Easel organizes a body of my
+work in what I hope is a useful form, so that new people in my lab can
+avoid reinventing the wheel as many times as I have. Perhaps it will
+also be useful to you.
 
-%% Easel arose by accretion. It is not intended to be an all-purpose
-%% sequence analysis library. General-purpose bioinformatics libraries
-%% are available that do aspire to such goals. The NCBI Toolkit and the
-%% Ajax library in EMBOSS are comprehensive resources for C
-%% programming. The BioPerl project is an extraordinary resource for
-%% Perl.
-
-I have strong opinions about why code is not re-used more often in
-bioinformatics, and Easel's design reflects those opinions. Easel is
+Easel is designed so that it can be used quickly and easily. It is
 \textbf{documented} with tutorial examples that are intended to make
 it easy to get started with any given Easel module. It is
 \textbf{modular}, to help you extract individual files or functions
 for use in your own code, without having to disentangle the entire
-library. It is \textbf{freely distributed} as open source code, under
-the Creative Commons Attribution License, which permits you to use and
-modify Easel for any purpose.
+library. It is \textbf{freely distributed} as open source so that you
+can use and modify Easel for anything, including commercial purposes.
 
-Each \ccode{.c} file in Easel corresponds to one Easel \emph{module},
-which consists of a group of functions for some
-task. Table~\ref{tbl:module_list} shows an overview of all the
-modules.  The \eslmod{sqio} module can automatically parse many common
+\section{Quick start}
+
+Let's assume you just want to take a quick tour, because you're
+deciding whether Easel is useful or not. You can compile Easel and try
+it out without installing it. 
+
+After you obtain an Easel source tarball (from
+\url{http://selab.janelia.org/easel}, for example), it should compile
+out of the box on any UNIX, Linux, or Mac OS/X operating
+system\footnote{You need a C compilation environment, which may not be
+installed. If not, install the free GNU C compiler, or another compiler, or
+see your local systems guru if you can't compile C programs.} with
+this incantation (where \ccode{xxx} is a version number):
+
+\begin{cchunk}
+% tar zxf easel-xxx.tar.gz
+% cd easel-xxx
+% ./configure
+% make
+% make check
+\end{cchunk}
+
+The \ccode{make check} command is optional. It runs a battery of
+quality control tests. All of these should pass. You should now see
+\ccode{libeasel.a} in the directory.
+
+Every source code module (that is, each \ccode{.c} file) ends with one
+or more \textbf{driver programs}, including programs for unit tests
+and benchmarks. These are \ccode{main()} functions that can be
+conditionally included when the module is compiled. Among them is
+always at least one \textbf{example} driver that shows you how to use
+the module. You can find the example code in module \eslmod{foo} by
+searching the \ccode{esl\_foo.c} file for the tag
+\ccode{eslFOO\_EXAMPLE}. To compile the example for module
+\eslmod{foo} as a working program, do:
+
+\begin{cchunk}
+   % cc -o example -L. -I. -DeslFOO_EXAMPLE esl_foo.c -leasel -lm
+\end{cchunk}
+
+You might need to replace the standard $\ccode{cc}$ with a different
+compiler name, depending on your system. Linking to the standard math
+library (\ccode{-lm}) may not be necessary, depending on what module
+you're compiling, but it won't hurt. The \ccode{-L.} and \ccode{-I.}
+options say that the library and the include files are in the current
+working directory (because you haven't installed them). Replace
+\ccode{foo} with the name of a module you want to play with, and you
+can compile any of Easel's example drivers this way.
+
+To run it, read the source code to see if it needs any command line
+arguments, like the name of a file to open, then:
+
+\begin{cchunk}
+   % ./example <any args needed>
+\end{cchunk}
+
+You can edit the example driver to play around with it, if you like,
+but it's better to make a copy of it in your own file (say,
+\ccode{foo\_example.c}) so you're not changing Easel's code. When you
+extract the code into a file, copy what's between the \ccode{\#ifdef
+eslFOO\_EXAMPLE} and \ccode{\#endif /*eslFOO\_EXAMPLE*/} flags that
+conditionally include the example driver (don't copy the flags
+themselves).  Compile your example code like this:
+
+\begin{cchunk}
+   % cc -o foo_example -L. -I. foo_example.c esl_foo.c -leasel -lm
+\end{cchunk}
+
+That's it. You're already compiling Easel programs that you can modify
+and play around with. If you're the type (like me) that learns best by
+example, you're on your way. The next section (below) will introduce
+the different modules in Easel, so you can see what you might be
+interested in. When you want to know more about a module, either check
+that module's chapter in this guide, or just read the module's source
+code. Most of the documentation is compiled automatically from the
+source code comments anyway.
+
+If you decide you want to install Easel permanently, see the full
+installation instructions in chapter~\ref{chapter:installation}.
+
+\section{Overview of Easel's modules}
+
+Each \ccode{.c} file in Easel corresponds to one Easel \emph{module}.
+A module consists of a group of functions for some
+task. Table~\ref{tbl:module_list} shows a list of all the modules. For
+example, the \eslmod{sqio} module can automatically parse many common
 unaligned sequence formats, and the \eslmod{msa} module can parse many
 common multiple alignment formats.
 
@@ -102,11 +170,10 @@ interface\_lapack & LAPACK linear algebra library   \\
 \label{tbl:module_list}
 \end{table}
 
-
-The normal way to use Easel would be as a C library
-(\ccode{libeasel.a}) that you link with your code. Easel is also
+Though you would normally use Easel as a C library
+(\ccode{libeasel.a}) that you link with your code, Easel is also
 designed to be sufficiently modular that you can grab individual
-source files out of the library and use them directly in your
+source files out of the library and use them directly in your own
 code. For example, to get Easel's sequence file i/o API, for example,
 you can take the sqio module (the C source \ccode{esl\_sqio.c} and the
 header \ccode{esl\_sqio.h}), plus the obligatory Easel core
@@ -188,77 +255,6 @@ data fields are stable and documented, and you are encouraged to reach
 into an object and access elemental data directly.
 
 
-\section{Quick start}
-
-Let's assume you just want to take a quick tour, because you're
-deciding whether Easel is useful to you or not. You can compile Easel
-and try it out without installing it. It should compile out of the box
-on any UNIX, Linux, or Mac OS/X operating system with this incantation
-(where \ccode{xxx} is a version number):
-
-\begin{cchunk}
-% tar zxf easel-xxx.tar.gz
-% cd easel-xxx
-% ./configure
-% make
-% make check
-\end{cchunk}
-
-The \ccode{make check} is optional. It runs a battery of quality
-control tests, all of which should pass. You should now see
-\ccode{libeasel.a} in the directory. That and the \ccode{.h} include
-files are all you need. If you decide you want to install Easel
-permanently, see the full installation instructions in
-chapter~\ref{chapter:installation}.
-
-
-Every source code module (\ccode{.c} file) ends with one or more
-\textbf{driver programs}, including programs for unit tests and
-benchmarks. These are \ccode{main()} functions that can be
-conditionally included when the module is compiled. Among them is
-always at least one \textbf{example} driver that shows how to use the
-module. You can find the example code in module \eslmod{foo} by
-searching the \ccode{esl\_foo.c} file for the tag
-\ccode{eslFOO\_EXAMPLE}. To compile the example for a module
-\eslmod{foo} as a working program, do:
-
-\begin{cchunk}
-   % cc -o example -L. -I. -DeslFOO_EXAMPLE esl_foo.c -leasel -lm
-\end{cchunk}
-
-You might need to replace the standard $\ccode{cc}$ with a different
-compiler name, depending on your system. Linking to the standard math
-library (\ccode{-lm}) may not be necessary, depending on what module
-you're compiling, but it won't hurt. The \ccode{-L.} and \ccode{-I.}
-options say that the library and the include files are in the current
-working directory (because you haven't installed them). Replace
-\ccode{foo} with the name of a module you want to play with, and you
-can compile any of Easel's example drivers this way.
-
-To run it, read the source code to see if it needs any command line
-arguments, like the name of a file to open, then:
-
-\begin{cchunk}
-   % ./example <any args needed>
-\end{cchunk}
-
-You can edit the example driver to play around with it, if you like,
-but it's better to make a copy of it in your own file (say,
-\ccode{foo\_example.c}) so you're not changing Easel's code. When you
-extract the code into a file, copy what's between the \ccode{\#ifdef
-eslFOO\_EXAMPLE} and \ccode{\#endif /*eslFOO\_EXAMPLE*/} flags that
-conditionally include the example driver (don't copy the flags
-themselves).  Compile your example code like this:
-
-\begin{cchunk}
-   % cc -o foo_example -L. -I. foo_example.c esl_foo.c -leasel -lm
-\end{cchunk}
-
-That's it. You're already compiling Easel programs that you can modify
-and play around with. If you're the type (like me) that learns best by
-example, you're on your way. When you want to know more about a
-module, either check that module's chapter in this guide, or
-UTSL.\footnote{``Use the source, Luke.''}.
 
 
 
