--- a/documentation/macros.tex
+++ b/documentation/macros.tex
@@ -2,7 +2,7 @@
 \newcommand{\ccode}[1]{{\small\texttt{#1}}}
 \newcommand{\emcode}[1]{{\small\bfseries\texttt{#1}}}
 \newcommand{\prog}[1]{\small\texttt{#1}}
-\newcommand{\eslmod}[1]{{\small\bfseries\texttt{#1}}}
+\newcommand{\eslmod}[1]{{\smaller\bfseries\texttt{#1}}}
 \newcommand{\eslfunc}[1]{\hyperlink{man:#1}{{\small\texttt{#1}}}}
 
 % Eliminate the ones below someday. 
