--- a/documentation/titlepage.tex
+++ b/documentation/titlepage.tex
@@ -18,11 +18,10 @@ Version 0.1; November 2004 \\
 \vspace*{\fill}
 
 Sean Eddy\\
-Howard Hughes Medical Institute and Dept. of Genetics\\
-Washington University School of Medicine\\
-4444 Forest Park Blvd., Box 8510\\
-Saint Louis, Missouri 63108, USA\\
-\url{http://selab.wustl.edu/}\\
+HHMI Janelia Farm Research Campus\\
+19700 Helix Drive\\
+Ashburn VA 20147\\
+\url{http://selab.janelia.org/}\\
 \end{center}
 
 \vspace*{\fill}
